# backend/build/swagger.json
@@ -615,7 +615,7 @@
 				]
 			}
 		},
-		"/api/trades/filter": {
+		"/api/trades/filter-trades": {
 			"get": {
 				"operationId": "FilterTrades",
 				"responses": {
@@ -636,26 +636,7 @@
 						"jwt": []
 					}
 				],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "filter",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "limit",
-						"required": false,
-						"schema": {
-							"default": 10,
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
+				"parameters": []
 			}
 		},
 		"/api/trades/metrics": {
